fix visibility

--- a/public/style.css
+++ b/public/style.css
@@ -655,7 +655,7 @@ a[href].observablehq-header-anchor {
 }
 
 .observablehq--block:empty {
-  display: none;
+  margin: 0;
 }
 
 .observablehq--block {
